fixed button placement

--- a/styles/style.css
+++ b/styles/style.css
@@ -140,7 +140,8 @@
     }
 
     .control-btn {
-      padding: 8px 16px;
+      padding: 08px 0px;
+      width: 65px;
     }
 
     .nav-btns button {
